--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,19 +15,26 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
-    "dotenv": "^17.2.1",
-    "zod": "^4.0.2",
-    "hono": "^4.8.2",
     "@hono/node-server": "^1.14.4",
-    "drizzle-orm": "^0.44.2",
+    "@hono/zod-openapi": "^1.1.0",
     "@libsql/client": "^0.15.9",
-    "better-auth": "^1.3.7"
+    "@scalar/hono-api-reference": "^0.9.16",
+    "better-auth": "^1.3.7",
+    "chalk": "^5.6.0",
+    "cli-highlight": "^2.1.11",
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.2",
+    "hono": "^4.8.2",
+    "itty-time": "^2.0.2",
+    "winston": "^3.17.0",
+    "zod": "^4.0.2"
   },
   "devDependencies": {
-    "tsdown": "^0.14.1",
-    "typescript": "^5.8.2",
-    "tsx": "^4.19.2",
     "@types/node": "^22.13.11",
-    "drizzle-kit": "^0.31.2"
+    "drizzle-kit": "^0.31.2",
+    "tsdown": "^0.14.1",
+    "tsx": "^4.19.2",
+    "type-fest": "^4.41.0",
+    "typescript": "^5.8.2"
   }
 }
