--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,32 +9,33 @@
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "db:local": "turso dev --db-file local.db",
+    "auth:db:generate": "bunx @better-auth/cli generate --output ./src/db/schema/auth.ts --config ./src/lib/auth.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
-    "@hono/node-server": "^1.14.4",
+    "@hono/node-server": "^1.19.1",
     "@hono/zod-openapi": "^1.1.0",
-    "@libsql/client": "^0.15.9",
+    "@libsql/client": "^0.15.14",
     "@scalar/hono-api-reference": "^0.9.16",
-    "better-auth": "^1.3.7",
+    "better-auth": "^1.3.8",
     "chalk": "^5.6.0",
     "cli-highlight": "^2.1.11",
-    "dotenv": "^17.2.1",
-    "drizzle-orm": "^0.44.2",
-    "hono": "^4.8.2",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
+    "hono": "^4.9.6",
     "itty-time": "^2.0.2",
     "winston": "^3.17.0",
-    "zod": "^4.0.2"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@types/node": "^22.13.11",
-    "drizzle-kit": "^0.31.2",
-    "tsdown": "^0.14.1",
-    "tsx": "^4.19.2",
+    "@types/node": "^22.18.1",
+    "drizzle-kit": "^0.31.4",
+    "tsdown": "^0.14.2",
+    "tsx": "^4.20.5",
     "type-fest": "^4.41.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.9.2"
   }
 }
