--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,7 @@
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
-    "db:local": "turso dev --db-file local.db",
+    "db:local": "bunx turso dev --db-file local.db",
     "auth:db:generate": "bunx @better-auth/cli generate --output ./src/db/schema/auth.ts --config ./src/lib/auth.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
