Add @remixicon/react dependency, implement error handling component, and refactor authentication flow. Introduce RequireAuth component for protected routes and update login redirection logic.

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -4,7 +4,7 @@ ENABLE_DOCS="true"
 DATABASE_URL=""
 DATABASE_AUTH_TOKEN=""
 CORS_ORIGIN="http://localhost:3001"
-BETTER_AUTH_SECRET="v0lghtn0FQCNElhHqurtoBZOepm3Ab1V"
+BETTER_AUTH_SECRET=""
 BETTER_AUTH_URL="http://localhost:300"
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
