--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,7 +31,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8",
-    "zod": "^4.1.5"
+    "zod": "^4.1.5",
+    "@remixicon/react": "^4.6.0"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.87.1",
