--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@remixicon/react": "^4.6.0",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-form": "^1.19.3",
     "@tanstack/react-query": "^5.87.1",
@@ -31,8 +32,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8",
-    "zod": "^4.1.5",
-    "@remixicon/react": "^4.6.0"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.87.1",
