Implement rate limiting for forecast API and add forecast client integration. Update environment variables for API keys and enhance server configuration with new middleware. Add new forecast routes and schemas for tide information and location search.

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -8,3 +8,5 @@ BETTER_AUTH_SECRET=""
 BETTER_AUTH_URL="http://localhost:300"
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
+OPEN_WEATHER_MAP_API_KEY=""
+STORM_GLASS_API_KEY=""
