--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,9 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.biome": "explicit",
     "source.organizeImports.biome": "explicit"
-  }
+  },
+  "cSpell.words": [
+    "Pooler",
+    "stormglass"
+  ]
 }
