--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,17 +16,22 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@hono-rate-limiter/redis": "^0.1.4",
     "@hono/node-server": "^1.19.1",
     "@hono/zod-openapi": "^1.1.0",
     "@libsql/client": "^0.15.14",
     "@scalar/hono-api-reference": "^0.9.16",
+    "@vercel/kv": "^3.0.0",
     "better-auth": "^1.3.8",
     "chalk": "^5.6.0",
     "cli-highlight": "^2.1.11",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "hono": "^4.9.6",
+    "hono-rate-limiter": "^0.4.2",
     "itty-time": "^2.0.2",
+    "unstorage": "^1.17.1",
     "winston": "^3.17.0",
     "zod": "^4.1.5"
   },
