Enhance forecast functionality by adding detailed tide information schema and implementing a new CountdownCard component for the dashboard. Update forecast client to fetch and return enriched tide data, and integrate location handling with improved user experience. Refactor existing components for better structure and maintainability.

--- a/biome.json
+++ b/biome.json
@@ -37,7 +37,8 @@
       },
       "style": {
         "noMagicNumbers": "off",
-        "noExportedImports": "off"
+        "noExportedImports": "off",
+        "noNonNullAssertion": "off"
       },
       "nursery": {
         "useConsistentTypeDefinitions": "off"
