feat: Update dependencies and enhance code structure
This commit updates various package dependencies to their latest versions, including improvements to the `@libsql/client`, `better-auth`, and `chalk` packages. Additionally, it introduces a new complexity setting in the `biome.json` configuration and refactors several components for better readability and maintainability, including the `CoastMap`, `FavoriteLocations`, and `TideAlerts` components. The code structure is improved by removing unnecessary imports and optimizing component layouts.

--- a/biome.json
+++ b/biome.json
@@ -42,6 +42,9 @@
       },
       "nursery": {
         "useConsistentTypeDefinitions": "off"
+      },
+      "complexity": {
+        "noExcessiveCognitiveComplexity": "off"
       }
     }
   }
