--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,6 +21,7 @@
     "@hono/zod-openapi": "^1.1.0",
     "@libsql/client": "^0.15.15",
     "@scalar/hono-api-reference": "^0.9.18",
+    "@vercel/functions": "^3.0.0",
     "@vercel/kv": "^3.0.0",
     "better-auth": "^1.3.9",
     "chalk": "^5.6.2",
